minor things improved